--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "babel-core": "^5.8.25",
     "babel-loader": "^5.3.2",
+    "babel-relay-plugin": "^0.9.3",
+    "graphql": "^0.7.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-relay": "^0.9.3",
+    "sync-request": "^3.0.1",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.11.0"
   },
